sweet alert style modified

--- a/Web/src/styles.css
+++ b/Web/src/styles.css
@@ -1,5 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
-@import 'assets/css/base.css';
-@import 'assets/css/plugins.css';
-@import 'assets/css/style.css';
-@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+@import "assets/css/base.css";
+@import "assets/css/plugins.css";
+@import "assets/css/style.css";
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+.swal2-header .swal2-title {
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 1.5;
+}
