whatsapp icon added

--- a/Web/src/app/footer/footer.component.html
+++ b/Web/src/app/footer/footer.component.html
@@ -32,6 +32,7 @@
         <a href="https://www.instagram.com/nishomiabayas/" target="_blank"><i class="icofont-instagram"></i></a>
         <a href="https://twitter.com/nish_omi" target="_blank"><i class="icofont-twitter"></i></a>
         <!-- <a href="#" target="_blank"><i class="icofont-brand-youtube"></i></a> -->
+        <a href="https://wa.me/message/F2AY4XXIBMCYB1" target="_blank"><i class="icofont-brand-whatsapp"></i></a>
       </div>
     </div>
   </footer>
