--- a/Web/src/app/header/header.component.html
+++ b/Web/src/app/header/header.component.html
@@ -18,6 +18,7 @@
           <a href="https://www.facebook.com/nishomiabayas/" target="_blank"><i class="icofont-facebook"></i></a>
           <a href="https://www.instagram.com/nishomiabayas/" target="_blank"><i class="icofont-instagram"></i></a>
           <a href="https://twitter.com/nish_omi" target="_blank"><i class="icofont-twitter"></i></a>
+          <a href="https://wa.me/message/F2AY4XXIBMCYB1" target="_blank"><i class="icofont-brand-whatsapp"></i></a>
           <a href="javascript:void(0)" (click)="changeLanguage(switchLang)" class="lang">{{ switchLang | translate }}</a>
         </div>
       </nav>
