--- a/Web/src/assets/css/style.css
+++ b/Web/src/assets/css/style.css
@@ -802,7 +802,7 @@ footer .foonav ul li a {
   position: relative;
 }
 .collimg {
-  max-height: 220px;
+  height: 220px;
   overflow: hidden;
   -webkit-box-shadow: 0 0 6px 2px rgba(0,0,0,0.1);
   box-shadow: 0 0 6px 2px rgba(0,0,0,0.1);
