Arabic name added

--- a/Services/Analystor.Nishomi.Admin/Views/Category/Create.cshtml
+++ b/Services/Analystor.Nishomi.Admin/Views/Category/Create.cshtml
@@ -17,6 +17,12 @@
                     <input type="text" id="unitName" asp-for="Name" autofocus required placeholder="Name">
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md-6 formsingle">
+                    <label class="mandatory">Local Name</label>
+                    <input type="text" id="unitNameAr" asp-for="NameAr" autofocus required placeholder="Local Name">
+                </div>
+            </div>
 
             <div class="row" id="parentCategoryDiv">
                 <div class="col-md-6 formsingle">
