--- a/Services/Analystor.Nishomi.Admin/Views/Category/Edit.cshtml
+++ b/Services/Analystor.Nishomi.Admin/Views/Category/Edit.cshtml
@@ -18,6 +18,12 @@
                     <input type="hidden" id="unitName" asp-for="CategoryId" />
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md-6 formsingle">
+                    <label class="mandatory">Name</label>
+                    <input type="text" id="localNameAr" asp-for="NameAr" autofocus required placeholder="Local Name">
+                </div>
+            </div>
 
             <div class="row" id="parentCategoryDiv">
                 <div class="col-md-6 formsingle">
