--- a/Web/src/app/productdetails/productdetails.component.html
+++ b/Web/src/app/productdetails/productdetails.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<section id="contact">
+<section id="contact" class="product-details">
   <div class="container">
     <div class="row">
       <div class="col-md-6">
