Bug fixes, Added validation, Slider modifications

--- a/Web/src/app/footer/footer.component.html
+++ b/Web/src/app/footer/footer.component.html
@@ -7,7 +7,7 @@
       <div class="foonav">
         <ul>
           <li>
-            <a routerLink="/home">{{ 'home' | translate }}</a>
+            <a routerLink="/">{{ 'home' | translate }}</a>
             <a routerLink="/story">{{ 'our_story' | translate }}</a>
           </li>
           <li>
