--- a/Web/src/app/productdetails/productdetails.component.css
+++ b/Web/src/app/productdetails/productdetails.component.css
@@ -7,3 +7,15 @@
   font-size: 12px;
   font-style: italic;
 }
+
+/* Chrome, Safari, Edge, Opera */
+.customsize input::-webkit-outer-spin-button,
+.customsize input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+.customsize input[type=number] {
+  -moz-appearance: textfield;
+}
