--- a/Web/src/app/contactus/contactus.component.html
+++ b/Web/src/app/contactus/contactus.component.html
@@ -58,13 +58,13 @@
               </div>
               <div class="icon-content">
                 <h6>{{ 'email' | translate | uppercase }}:</h6>
-                <p><a href="mailto:info@nishomiabayas.com">info@nishomiabayas.com</a></p>
+                <p><a href="mailto:ahlan@nishomiabayas.com">ahlan@nishomiabayas.com</a></p>
               </div>
             </li>
 
             <li class="clearfix">
               <div class="icon">
-                <i class="icofont-phone"></i>
+                <i class="icofont-brand-whatsapp"></i>
               </div>
               <div class="icon-content">
                 <h6>{{ 'contact_no' | translate |uppercase }}:</h6>
