--- a/Web/src/app/header/header.component.html
+++ b/Web/src/app/header/header.component.html
@@ -8,11 +8,11 @@
           <a routerLink="/"><img src="assets/images/logo.jpg" alt=""></a>
         </div>
         <ul class="main">
-          <li><a routerLink="/products">{{ 'our_products' | translate }}</a></li>
-          <li><a routerLink="/story">{{ 'our_story' | translate }}</a></li>
-          <li><a routerLink="/blogs">{{ 'blogs' | translate }}</a></li>
-          <li><a routerLink="/contactus">{{ 'stay_in_touch' | translate }}</a></li>
-          <li><a routerLink="/products">{{ 'view_products' | translate }}</a></li>
+          <li><a routerLink="/products" routerLinkActive="active">{{ 'our_products' | translate }}</a></li>
+          <li><a routerLink="/story" routerLinkActive="active">{{ 'our_story' | translate }}</a></li>
+          <li><a routerLink="/blogs" routerLinkActive="active">{{ 'blogs' | translate }}</a></li>
+          <li><a routerLink="/contactus" routerLinkActive="active">{{ 'stay_in_touch' | translate }}</a></li>
+          <li><a routerLink="/products" routerLinkActive="active">{{ 'view_products' | translate }}</a></li>
         </ul>
         <div class="social">
           <a href="https://www.facebook.com/nishomiabayas/" target="_blank"><i class="icofont-facebook"></i></a>
