--- a/Web/src/app/home/home.component.html
+++ b/Web/src/app/home/home.component.html
@@ -45,6 +45,8 @@
             </div>
           </div>
         </div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
         <div class="prodpage"></div>
       </div>
     </div>
@@ -67,6 +69,7 @@
 
     </section>
 
+    <img class="story-mobile-image" src="assets/images/bg-about01-mob.jpg" alt="">
     <section class="story">
     <div class="container">
       <div class="banntxt">
