--- a/Web/src/app/privacy/privacy.component.html
+++ b/Web/src/app/privacy/privacy.component.html
@@ -43,9 +43,9 @@
         <h3>{{ 'privacy_policy_subtitle10' | translate }}</h3>
         <p>{{ 'privacy_policy_10_desc1' | translate }}</p>
         <h3>{{ 'privacy_policy_subtitle11' | translate }}</h3>
-        <p>{{ 'privacy_policy_11_desc1.1' | translate }}<a href="mailto:info@nishOmi.com" target="_self" data-content="info@nishOmi.com" data-type="mail"> info@nishOmi.com</a>.{{ 'privacy_policy_11_desc1.2' | translate }}</p>
+        <p>{{ 'privacy_policy_11_desc1.1' | translate }}<a href="mailto:ahlan@nishomiabayas.com" target="_self" data-content="ahlan@nishomiabayas.com" data-type="mail"> ahlan@nishomiabayas.com</a>.{{ 'privacy_policy_11_desc1.2' | translate }}</p>
         <h3>{{ 'privacy_policy_subtitle12' | translate }}</h3>
-        <p>{{ 'privacy_policy_12_desc1.1' | translate }}<a href="mailto:info@nishomiabayas.com" target="_self" data-content="info@nishomiabayas.com" data-type="mail"> info@nishomiabayas.com</a>. {{ 'privacy_policy_12_desc1.2' | translate }}</p>
+        <p>{{ 'privacy_policy_12_desc1.1' | translate }}<a href="mailto:ahlan@nishomiabayas.com" target="_self" data-content="ahlan@nishomiabayas.com" data-type="mail"> ahlan@nishomiabayas.com</a>. {{ 'privacy_policy_12_desc1.2' | translate }}</p>
         <h3>{{ 'privacy_policy_subtitle13' | translate }}</h3>
         <p>{{ 'privacy_policy_13_desc1' | translate }}</p>
         <h3>{{ 'privacy_policy_subtitle14' | translate }}</h3>
@@ -55,7 +55,7 @@
           {{ 'location_address_line2' | translate }}<br>
           {{ 'location_address_line3' | translate }}<br>
           {{ 'location_address_line4' | translate }}<br>
-        <a href="mailto:info@nishomiabayas.com" target="_self" data-content="info@nishomiabayas.com" data-type="mail"> info@nishomiabayas.com</a>
+        <a href="mailto:ahlan@nishomiabayas.com" target="_self" data-content="ahlan@nishomiabayas.com" data-type="mail"> ahlan@nishomiabayas.com</a>
        </address>
      </div>
    </div>
