--- a/Web/src/app/terms/terms.component.html
+++ b/Web/src/app/terms/terms.component.html
@@ -19,7 +19,7 @@
         {{ 'location_address_line2' | translate }}<br>
         {{ 'location_address_line3' | translate }}<br>
         {{ 'location_address_line4' | translate }}<br>
-        <a href="mailto:info@nishomiabayas.com" target="_self" data-content="info@nishomiabayas.com" data-type="mail"> info@nishomiabayas.com</a>
+        <a href="mailto:ahlan@nishomiabayas.com" target="_self" data-content="ahlan@nishomiabayas.com" data-type="mail"> ahlan@nishomiabayas.com</a>
       </address>
       <h3>{{ 'terms_of_use_subtitle6' | translate }}</h3>
       <p>{{ 'terms_of_use_6_desc1' | translate }}</p>
