--- a/Web/src/app/productdetails/productdetails.component.css
+++ b/Web/src/app/productdetails/productdetails.component.css
@@ -8,6 +8,10 @@
   font-style: italic;
 }
 
+.no-action {
+  cursor: not-allowed;
+}
+
 /* Chrome, Safari, Edge, Opera */
 .customsize input::-webkit-outer-spin-button,
 .customsize input::-webkit-inner-spin-button {
