--- a/Web/src/styles-en.css
+++ b/Web/src/styles-en.css
@@ -116,7 +116,7 @@ header .social a.lang {
 }
 @media only screen and (max-width: 1024px) {
   .story {
-    background: #ccc url(assets/images/bg-about01-en.jpg) no-repeat top center fixed;
+    background: #ccc url(assets/images/bg-about01-en.jpg) no-repeat top right -250px fixed;
   }
   .hmeproduct .caroprod {
     margin-left: 0%;
@@ -124,7 +124,7 @@ header .social a.lang {
 }
 @media only screen and (max-width: 991px) {
   .story {
-    background: #ccc url(assets/images/bg-about01-en.jpg) no-repeat top center;
+    background: #ccc url(assets/images/bg-about01-en.jpg) no-repeat top right -290px;
   }
   .burger {
     right: 20px;
@@ -132,6 +132,6 @@ header .social a.lang {
 }
 @media only screen and (max-width: 767px) {
   .story {
-    background: #fff url(assets/images/bg-about01-en.jpg) no-repeat top left;
+    background: #fff url(assets/images/bg-about01-en.jpg) no-repeat top -45px right -230px;
   }
 }
