--- a/Web/src/app/productdetails/productdetails.component.html
+++ b/Web/src/app/productdetails/productdetails.component.html
@@ -191,8 +191,8 @@
                   </div>
                   <ng-template #updatingBtn>
                     <button class="button no-action" type="button">
-                      <!-- <i class="fa fa-spinner fa-spin"></i> -->
-                      <span>{{ 'button.updating' | translate }}</span>
+                      <i class="mr-2 fa fa-spinner faa-spin animated"></i>
+                      <span>{{ 'button.wait' | translate }}</span>
                     </button>
                   </ng-template>
                 </div>
