--- a/Web/src/assets/css/responsive.css
+++ b/Web/src/assets/css/responsive.css
@@ -525,8 +525,7 @@
     margin-bottom: 0;
   }
   .story .banntxt h1 {
-    color: #141414;
-    padding: 0
+    padding: 0;
   }
   .story .banntxt p {
     color: #898989 !important;
