--- a/Web/src/app/language-selector/language-selector.component.css
+++ b/Web/src/app/language-selector/language-selector.component.css
@@ -7,14 +7,22 @@
     box-shadow: 0 0px 10px rgba(0,0,0,0.5);
 }
 ::ng-deep .modal-dialog .modal-content {
+  border-radius: 10px;
+  border: 4px solid #cdcdcd;
+}
+::ng-deep .modal-dialog .modal-body {
   background: #f3f3f3 url(../../assets/images/bg-popup.png) no-repeat center top;
   background-size: 100% auto;
-  height: 500px;
   border: 0;
-  border-radius: 10px;
+  border-radius: 0 0 10px 10px;
 }
 ::ng-deep .modal-dialog .modal-header {
   border:none;
+  background: #000;
+}
+::ng-deep .modal-dialog .modal-header img {
+  width: 80%;
+  max-width: 170px;
 }
 ::ng-deep .langselect {
   display: flex;
