--- a/Web/src/app/language-selector/language-selector.component.html
+++ b/Web/src/app/language-selector/language-selector.component.html
@@ -1,5 +1,6 @@
 <ng-template #languageModal let-modal>
   <div class="modal-header">
+    <img src="assets/images/logo.jpg" alt="">
     <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="modal.dismiss()">
       <span aria-hidden="true">&times;</span>
     </button>
