translation issue fixed

--- a/Web/src/app/contactus/contactus.component.html
+++ b/Web/src/app/contactus/contactus.component.html
@@ -68,7 +68,7 @@
               </div>
               <div class="icon-content">
                 <h6>{{ 'contact_no' | translate |uppercase }}:</h6>
-                <p><a href="tel:+971504065903">+971 504 065 903</a></p>
+                <p dir="ltr"><a href="tel:+971504065903">+971 504 065 903</a></p>
               </div>
             </li>
           </ul>
