--- a/Web/src/app/productdetails/productdetails.component.html
+++ b/Web/src/app/productdetails/productdetails.component.html
@@ -162,34 +162,41 @@
                     </span>
                   </div>
                   <div class="form-group col-md-12">
-                    <input formControlName="phone" type="text" required="required" appNumberOnly [maxlen]="11">
+                    <input formControlName="phone" type="text" required="required" appNumberOnly [maxlen]="14">
                     <label for="input" class="control-label">{{ 'label.contact_number' | translate }}</label><i class="bar"></i>
                     <span class="error" *ngIf="(submitted || profileForm.controls.phone.touched) && !profileForm.controls.phone.valid">
                       {{ (profileForm.controls.phone.errors.required ? 'error.contact_number_mandatory' : 'error.contact_number_invalid') | translate }}
                     </span>
                   </div>
                   <div class="form-group col-md-12">
-                    <input formControlName="street" required="notrequired"  type="text"/>
+                    <input formControlName="street" required="required" type="text"/>
                     <label for="input" class="control-label">{{ 'label.street' | translate }}</label><i class="bar"></i>
                     <!-- <span class="error" *ngIf="(submitted || profileForm.controls.address.touched) && !profileForm.controls.address.valid">
                       {{ 'error.address_mandatory' | translate }}
                     </span> -->
                   </div>
                   <div class="form-group col-md-12">
-                    <input formControlName="post" required="required"  type="text"/>
+                    <input formControlName="post" type="text"/>
                     <label for="input" class="control-label">{{ 'label.post' | translate }}</label><i class="bar"></i>
-                    <span class="error" *ngIf="(submitted || profileForm.controls.post.touched) && !profileForm.controls.post.valid">
-                      {{ 'error.post_mandatory' | translate }}
-                    </span>
-                  </div>
-                  <div class="form-group col-md-12">
-                    <select formControlName="country" required="required"> 
-                      <option [value]="country.name" *ngFor="let country of countries">{{country.name}}</option>
-                    </select>
-                    <!-- <label for="select" class="control-label">{{ 'label.country' | translate }}</label><i class="bar"></i> -->
                     <!-- <span class="error" *ngIf="(submitted || profileForm.controls.post.touched) && !profileForm.controls.post.valid">
                       {{ 'error.post_mandatory' | translate }}
                     </span> -->
+                  </div>
+                  <div class="form-group col-md-12">
+                    <select formControlName="country" required="required"> 
+                      <option value=""  ng-selected="selected">{{ 'label.selectcountry' | translate }}</option>
+                      <option [value]="'label.ksa'|translate">{{ 'label.ksa' | translate }}</option>
+                      <option [value]="'label.qatar'|translate">{{ 'label.qatar' | translate }}</option>
+                      <option [value]="'label.oman'|translate">{{ 'label.oman' | translate }}</option>
+                      <option [value]="'label.bahrain'|translate">{{ 'label.bahrain' | translate }}</option>
+                      <option [value]="'label.uae'|translate">{{ 'label.uae' | translate }}</option>
+                      <option [value]="'label.kuwait'|translate">{{ 'label.kuwait' | translate }}</option>
+                      <!-- <option [value]="country.name|translate" *ngFor="let country of countries">{{country.name|translate}}</option> -->
+                    </select>
+                    <!-- <label for="select" class="control-label">{{ 'label.country' | translate }}</label><i class="bar"></i> -->
+                    <span class="error" *ngIf="(submitted || profileForm.controls.country.touched) && !profileForm.controls.country.valid">
+                      {{ 'error.select_country' | translate }}
+                    </span>
                   </div>
                   <div class="form-group col-md-12">
                     <textarea formControlName="message"></textarea>
